# extralist

./: .gitignore  README.md  extralist.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
extralist/: __init__.py  defaultlist.py  linked.py  pagedlist.py  slicable.py  sliceable.py  slicedview.py  structsequence.py  version.py
tests/: test_chunk_sequence.py  test_defaultlist.py  test_exports.py  test_linkedlist.py  test_pagedlist.py  test_pagedlist.txt  test_sequences.py  test_slicables.py  test_sliceables.py  test_slicedview.py  test_structsequence.py
